--- a/index.html
+++ b/index.html
@@ -152,7 +152,6 @@
     <div class="row">
         <div class="col-12 col-lg-12 d-flex align-items-center justify-content-center">
             <div>
-                <h1 class="text-white">Our Menu</h1>
 
             </div>
         </div>
@@ -212,4 +211,6 @@
         <p class="text-muted m-0">info@kottupalace.lk</p>
     </div>
 </div>
+<br>
 </body>
+</html>
