--- a/index.html
+++ b/index.html
@@ -143,8 +143,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center bg-black" id="section-4">
-
+<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center bg-black" id="section-4" data-aos="zoom-in-up">
 
 </div>
 <a id="back-to-top" href="#" class="btn btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
