--- a/index.html
+++ b/index.html
@@ -140,9 +140,21 @@
         </div>
     </div>
 </div>
-<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center bg-black" id="section-4" data-aos="zoom-in-up">
-
+<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center position-relative" id="section-4" data-aos="zoom-in-up">
+    <section class="position-absolute w-100 h-100 top-0 start-0 z-1">
+        <video autoplay loop muted class="w-100 h-100 object-fit-cover">
+            <source src="https://video.wixstatic.com/video/d47472_58cce06729c54ccb935886c4b3647274/1080p/mp4/file.mp4" type="video/mp4">
+        </video>
+    </section>
+    <div class="w-50 p-5 text-center position-relative z-2 d-flex align-items-center justify-content-between bg-black">
+        <div>
+        <h1 class="text-white">Order Now</h1>
+        <span class="text-muted">Get It Delivered to Your Door in 30 Minutes</span>
+        </div>
+        <button class="btn"><img src="https://i.gifer.com/3R7s.gif" width="100px" id="orderNow" class="rounded-circle"></button>
+    </div>
 </div>
+
 <a id="back-to-top" href="#" class="btn btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
 <div class="container-fluid d-flex align-items-center justify-content-center p-3 bg-black">
     <div class="container p-4 bg-dark rounded-3 d-flex align-items-center justify-content-between">
