--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <source src="https://video.wixstatic.com/video/d47472_58cce06729c54ccb935886c4b3647274/1080p/mp4/file.mp4" type="video/mp4">
         </video>
     </section>
-    <div class="w-50 p-5 text-center position-relative z-2 d-flex align-items-center justify-content-between bg-black">
+    <div class="w-50 p-5 text-center position-relative z-2 d-flex align-items-center justify-content-between bg-dark border border-orangered border-2">
         <div>
         <h1 class="text-white">Order Now</h1>
         <span class="text-muted">Get It Delivered to Your Door in 30 Minutes</span>
