--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
             <source src="https://video.wixstatic.com/video/d47472_58cce06729c54ccb935886c4b3647274/1080p/mp4/file.mp4" type="video/mp4">
         </video>
     </section>
-    <div class="w-50 p-5 text-center position-relative z-2 d-flex align-items-center justify-content-between bg-dark border border-orangered border-2">
+    <div class="w-50 p-5 text-center position-relative z-2 d-flex align-items-center justify-content-between bg-black border border-orangered border-2">
         <div>
         <h1 class="text-white">Order Now</h1>
         <span class="text-muted">Get It Delivered to Your Door in 30 Minutes</span>
         </div>
-        <button class="btn"><img src="https://i.gifer.com/3R7s.gif" width="100px" id="orderNow" class="rounded-circle"></button>
+        <button class="btn"><img src="images/tenor.gif" width="100px" id="orderNow" class="rounded-circle border border-white"></button>
     </div>
 </div>
 
