--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         </div>
                     </div>
 
-                    <a target="_blank" href="#" class="nav-item nav-link active">Order</a>
+                    <a href="#section-4" class="nav-item nav-link active">Order</a>
 
                 </div>
             </div>
