--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!--AOS JS File-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!--Custom CSS-->
     <link href="css/custom.css" rel="stylesheet">
     <!--Loader-->
