--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
         <div class="text-muted fs-2"><i class="fab fa-youtube"></i></div>
     </div>
     <div class="text-center">
-        <p class="text-muted m-0">Nittambuwa - 077 xxxx xxx | Gampaha - 077 xxxx xxx</p>
-        <p class="text-muted m-0">Nittambuwa - 9, Veyangoda Road, Nittambuwa</p>
+        <p class="text-muted m-0">Colombo - 077 xxxx xxx | Gampaha - 077 xxxx xxx</p>
+        <p class="text-muted m-0">Colombo - 9, Main Road, Colombo</p>
         <p class="text-muted m-0">Gampaha - 124/A, Marry Road, Gampaha</p>
         <p class="text-muted m-0">info@kottupalace.lk</p>
     </div>
