--- a/index.html
+++ b/index.html
@@ -156,6 +156,25 @@
     </div>
 </div>
 
+<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center" id="section-2">
+    <div class="row">
+        <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
+            <div class="p-5 text-center">
+                <img src="images/yut87_edited.png"
+                     width="75%" data-aos="zoom-out-right">
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 d-flex align-items-center justify-content-center">
+            <div class="p-5 text-center" data-aos="zoom-out-left">
+                <h1 class="text-white">Did You Know ?</h1>
+                <h4 class="text-white">Kottu is one of the national dishes of Sri Lanka, a favorite among locals and tourists throughout the country. It employs crucial elements of national Sri Lankan
+                    cuisine</h4>
+                <p class="text-white text-end lh-1">-<em>Tasteatlas</em></p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <a id="back-to-top" href="#" class="btn btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
 <div class="container-fluid d-flex align-items-center justify-content-center p-3 bg-black">
     <div class="container p-4 bg-dark rounded-3 d-flex align-items-center justify-content-between">
