--- a/index.html
+++ b/index.html
@@ -226,9 +226,9 @@
         <p class="text-muted m-0">Colombo - 9, Main Road, Colombo</p>
         <p class="text-muted m-0">Gampaha - 124/A, Marry Road, Gampaha</p>
         <p class="text-muted m-0">info@kottupalace.lk</p>
-        <p class="text-muted m-0 mt-2 small">Designed By Malindu Prabodhitha | 2024-09-07</p>
+        <p class="text-muted m-0 mt-2 small pb-2">Designed By Malindu Prabodhitha | 2024-09-07</p>
     </div>
 </div>
-<br>
+
 </body>
 </html>
