chef part added

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
     </div>
 </div>
 
+<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center" id="section-3" data-aos="zoom-in-up">
+
+</div>
+
+
 <a id="back-to-top" href="#" class="btn btn-lg back-to-top" role="button"><i class="fas fa-chevron-up"></i></a>
 <div class="container-fluid d-flex align-items-center justify-content-center p-3 bg-black">
     <div class="container p-4 bg-dark rounded-3 d-flex align-items-center justify-content-between">
