--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!--AOS JS File-->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link href="lightbox2-2.11.4/dist/css/lightbox.css" rel="stylesheet" />
+    <script src="lightbox2-2.11.4/dist/js/lightbox.js"></script>
+
     <!--Custom CSS-->
     <link href="css/custom.css" rel="stylesheet">
     <!--Loader-->
@@ -178,7 +181,45 @@
     </div>
 </div>
 
-<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center" id="section-3" data-aos="zoom-in-up">
+<div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center gap-3" id="section-3" data-aos="zoom-in-up">
+    <div class="card text-bg-dark" style="width: 18rem;">
+        <img src="images/background-3.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Classic Chicken Kottu</h5>
+            <p class="card-text">Rs. 1350.00</p>
+            <a data-title="My caption" class="btn btn-orangered" href="images/background-3.jpg" data-lightbox="roadtrip">Classic Chicken Kottu </a>
+
+        </div>
+    </div>
+    <div class="card text-bg-dark" style="width: 18rem;">
+        <img src="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4fuaa71v7f6_1641624064152.jpg?time=1641624064543" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Prawn Pasta Kottu</h5>
+            <p class="card-text">Rs. 1350.00</p>
+            <a data-title="My caption" class="btn btn-orangered" href="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4fuaa71v7f6_1641624064152.jpg?time=1641624064543" data-lightbox="roadtrip">Prawn Pasta Kottu</a>
+
+        </div>
+    </div>
+    <div class="card text-bg-dark" style="width: 18rem;">
+        <img src="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4draa27o7f6_1639897871292.jpg?time=1639897871582" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> Low Carb Seafood Kottu</h5>
+            <p class="card-text">Rs. 1350.00</p>
+            <a data-title="My caption" class="btn btn-orangered" href="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4draa27o7f6_1639897871292.jpg?time=1639897871582" data-lightbox="roadtrip"> Low Carb Seafood Kottu</a>
+
+        </div>
+    </div>
+    <div class="card text-bg-dark" style="width: 18rem;">
+        <img src="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4bxa4d6i7f6_1635874860762.jpg?time=1635874863430" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Dolphin Chicken Kottu</h5>
+            <p class="card-text">Rs. 1350.00</p>
+            <a data-title="My caption" class="btn btn-orangered" href="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4bxa4d6i7f6_1635874860762.jpg?time=1635874863430" data-lightbox="roadtrip">Dolphin Chicken Kottu
+            </a>
+
+        </div>
+    </div>
+
 
 </div>
 
