--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 </div>
 
 <div class="container-fluid min-vh-100 d-flex justify-content-center align-items-center gap-3" id="section-3" data-aos="zoom-in-up">
-    <div class="card text-bg-dark" style="width: 18rem;">
+    <div class="card text-bg-dark" style="width: 18rem;" data-aos="zoom-in-left" data-aos-delay="100">
         <img src="images/background-3.jpg" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Classic Chicken Kottu</h5>
@@ -191,7 +191,7 @@
 
         </div>
     </div>
-    <div class="card text-bg-dark" style="width: 18rem;">
+    <div class="card text-bg-dark" style="width: 18rem;" data-aos="zoom-in-left" data-aos-delay="200">
         <img src="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4fuaa71v7f6_1641624064152.jpg?time=1641624064543" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Prawn Pasta Kottu</h5>
@@ -200,7 +200,7 @@
 
         </div>
     </div>
-    <div class="card text-bg-dark" style="width: 18rem;">
+    <div class="card text-bg-dark" style="width: 18rem;" data-aos="zoom-in-left" data-aos-delay="300">
         <img src="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4draa27o7f6_1639897871292.jpg?time=1639897871582" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title"> Low Carb Seafood Kottu</h5>
@@ -209,7 +209,7 @@
 
         </div>
     </div>
-    <div class="card text-bg-dark" style="width: 18rem;">
+    <div class="card text-bg-dark" style="width: 18rem;" data-aos="zoom-in-left" data-aos-delay="400">
         <img src="https://merchant.appigo.co/applova/app-images/910_59105372/PRD_4bxa4d6i7f6_1635874860762.jpg?time=1635874863430" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Dolphin Chicken Kottu</h5>
