--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
 
         </div>
     </div>
-
+    <div>
+        <button class="btn btn-orangered" style="width: 9rem" data-aos="zoom-in-left" data-aos-delay="500">Explore Our Full Menu</button>
+    </div>
 
 </div>
 
