--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
     </div>
     <div>
-        <button class="btn btn-orangered" style="width: 9rem" data-aos="zoom-in-left" data-aos-delay="500">Explore Our Full Menu</button>
+        <button class="btn btn-orangered" style="width: 9rem" id="btnMenu" data-aos="zoom-in-left" data-aos-delay="500">Explore Our Full Menu</button>
     </div>
 
 </div>
